--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+body {
+  color: white;
+  font-size: 16px;
+}
+
+h1 {
+  margin-bottom: 1rem;
+}
+
 .App {
-  text-align: center;
+  background: url(assets/images/bg.jpg);
+  background-size: cover;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +46,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.outbox {
+  padding-top: 120px;
+}
+
+.panel {
+  width: 400px;
+  min-height: 300px;
+  max-height: 480px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 1.5rem;
+  border-radius: 12px;
 }
