--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,15 @@ h1 {
   border-radius: 12px;
 }
 
+.game-panel {
+  max-height: 600px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 1.5rem;
+  border-radius: 12px;
+}
+
 .panel-lg {
   width: 600px;
 }
@@ -77,7 +86,7 @@ h1 {
 
 .dismissable-alert {
   transition: opacity 1s;
-  width: calc(100% - 6rem);
+  width: calc(100% - 28rem);
 }
 
 .dismissable-alert.dismiss {
@@ -110,4 +119,35 @@ h1 {
 .list-group p {
   font-size: 0.8rem;
   color: rgba(255,255,255,0.64);
+}
+
+.instrument-card {
+  background: transparent;
+  border-color: rgba(255, 255, 255, 0.25);
+  transition: all 0.6s;
+}
+
+.instrument-card:hover {
+  background: rgba(255, 255, 255, 0.125);
+  border-color: rgba(255, 255, 255, 0.5);
+}
+
+.instrument-card.active {
+  border-width: 2px;
+  border-color: rgba(255, 255, 255, 0.75);
+}
+
+.instrument-card .badge {
+  display: none;
+  position: absolute;
+  left: 4px;
+  top: 8px;
+}
+
+.instrument-card.active .badge {
+  display: inline-block;
+}
+
+.instrument-card .badge>i {
+  font-size: 20px;
 }
